[package]
name = "my-stash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["macros"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = "1.0.2"
mongodb = "2.5.0"
urlencoding = "2.1.2"
pbkdf2 = "0.12.1"
serde = "1.0.167"
futures = "0.3.28"
serde_json = "1.0.100"

[[bin]]
name = "get-vault"
path = "api/get_vault.rs"
